crates/rome_js_formatter/tests/specs/prettier/typescript/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement21.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "typescript\\conformance\\parser\\ecmascript5\\Statements\\parserES5ForOfStatement21.ts"
---

# Input

```js
//@target: ES5
for (var of of) { }
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,3 +1,2 @@
 //@target: ES5
-for (var of of) {
-}
+for (var of of) { }
```

# Output

```js
//@target: ES5
for (var of of) { }
```


# Errors
```
parserES5ForOfStatement21.ts:2:15 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected an expression, or an assignment but instead found ')'
  
  × Expected an expression, or an assignment here
  
    ┌─ parserES5ForOfStatement21.ts:2:15
    │
  2 │ for (var of of) { }
    │               ^
  

```


